--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Rafael Maciel",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.0",
+    "classnames": "^2.2.6",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.4.0",
+    "moment": "^2.29.1",
+    "react-moment": "^1.0.0",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
